# mlops

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  run_evaluation.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py
notebook/: nb.ipynb
