[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
