[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.128.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
